# spectrum

./: .dockerignore  .gitignore  Dockerfile  README  README.md  app.py  bake.py  blueteamer.py  build_binary.py  config.json  hook-rich.py  lab.py  main.py  pyproject.toml  redteamer.py  requirements.txt  session.md  spectrum-security_1.35.0_all.deb  tools.py
.github/workflows/: docker-publish.yml  release.yml
debian/DEBIAN/: control  postinst
redteamer/: app.py  blueteamer.py  config.json  lab.py  main.py  redteamer.py  viewer.py
redteamer/modules/: port_scanner.py
spectrum/: __init__.py  attack_dashboard.html  audit.py  blueteamer.py  compliance.py  config.json  demo_site.html  drift_analyser.py  install-spectrum.bat  lab.py  main.py  multimodal_injection.py  providers.py  redteamer.py  requirements.txt  tools.py  tui_settings.py
spectrum/spectrum/: demo_server.py  demo_site.html  main.py  redteamer.py
spectrum/spectrum/modules/: hash_util.py
spectrum/tutorials/: IMPORTANT.md  advanced_tool_methodology.md  cybersecurity_skill.md  learned_exploits.md  pentest_methodology.md  tools.md
spectrum_security.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tutorials/: IMPORTANT.md  script_method.md
