[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrum-security"
version = "1.35.18"
description = "Autonomous Cyber Reasoning System - Red Team & Blue Team AI agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "William Jiang", email = "jiangwilliam30@gmail.com"}
]
keywords = ["cybersecurity", "red-team", "blue-team", "LLM", "autonomous-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10"
dependencies = [
    "flask",
    "gradio",
    "rich",
    "requests",
]

[project.scripts]
spectrum = "spectrum.main:main"

[tool.setuptools.packages.find]
include = ["spectrum*"]